# footnotes

./: .age.toml  .editorconfig  .gitignore  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yaml  pyproject.toml  setup.cfg
.github/: release-body.md
.github/workflows/: deploy-docs.yaml  main.yaml  main.yml  release.yaml  release.yml
docs/: conf.py  index.rst
docs/_locales/ja/LC_MESSAGES/: index.po
src/atsphinx/: footnotes.py
tests/: conftest.py  test_it.py
tests/test-root/: conf.py  index.rst
