[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "atsphinx-footnotes"
authors = [{name = "Kazuya Takei", email = "myself@attakei.net"}]
license = {file = "LICENSE"}
requires-python = ">= 3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Sphinx",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation :: Sphinx",
]
readme = "README.rst"
dependencies = [
  "sphinx",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/atsphinx/footnotes"

[dependency-groups]
dev = [
  {include-group = "doc"},
  {include-group = "test"},
  "doc8>=1.1.2",
  "ruff>=0.12.5",
  "ty>=0.0.1a16",
]
doc = []
test = [
  "pytest ==7.*",
]

[tool.flit.module]
name = "atsphinx.footnotes"

[tool.flit.sdist]
exclude = [".github", "tests"]
